// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | FlexTable / FlexTable with different size props Tables With Different Column Distance On Mobile 1`] = `
.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c2 {
  position: relative;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  padding-left: 4px;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

.c3:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Tables With Different Column Distance on mobile
  </span>
  <div
    className="c0"
  >
    <div
      className="c2 c3"
      role="table"
    >
      <caption
        className="c4"
      >
        <span
          className="c1 c5"
        />
      </caption>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | FlexTable / FlexTable with different size props Tables With Different Densities 1`] = `
.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c7 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c7 > *:not(:first-child) {
  padding-top: 0;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c14 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c17 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c12 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c13 {
  width: inherit;
}

.c16 {
  overflow: hidden;
}

.c8 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c8 > *:first-child {
  padding-left: 0;
}

.c8 > *:last-child {
  padding-right: 0;
}

.c15 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c15:hover {
  background: #F5F5F5;
}

.c15 > *:first-child {
  padding-left: 0;
}

.c15 > *:last-child {
  padding-right: 0;
}

.c18 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 0px;
  padding-bottom: 0px;
  margin-right: 0;
  margin-left: 0;
}

.c18 > *:first-child {
  padding-left: 0;
}

.c18 > *:last-child {
  padding-right: 0;
}

.c19 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 0px;
  padding-bottom: 0px;
  margin-right: 0;
  margin-left: 0;
}

.c19:hover {
  background: #F5F5F5;
}

.c19 > *:first-child {
  padding-left: 0;
}

.c19 > *:last-child {
  padding-right: 0;
}

.c20 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 8px;
  padding-bottom: 8px;
  margin-right: 0;
  margin-left: 0;
}

.c20 > *:first-child {
  padding-left: 0;
}

.c20 > *:last-child {
  padding-right: 0;
}

.c21 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 8px;
  padding-bottom: 8px;
  margin-right: 0;
  margin-left: 0;
}

.c21:hover {
  background: #F5F5F5;
}

.c21 > *:first-child {
  padding-left: 0;
}

.c21 > *:last-child {
  padding-right: 0;
}

.c9 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  border-bottom: 1px solid #282823;
}

.c11 {
  overflow: hidden;
}

.c3 {
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  padding-left: 4px;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

.c4:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Tables With Different Densities
  </span>
  <div
    className="c0"
  >
    <span
      className="c2"
    >
      Default (Medium)
    </span>
    <div
      className="c3 c4"
      role="table"
    >
      <caption
        className="c5"
      >
        <span
          className="c1 c6"
        />
      </caption>
      <div
        className="c7 c8 c9"
        role="row"
      >
        <div
          className="c10 c11"
          role="columnheader"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c14"
            >
              Header 1
            </span>
          </div>
        </div>
        <div
          className="c10 c11"
          role="columnheader"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c14"
            >
              Header 2
            </span>
          </div>
        </div>
        <div
          className="c10 c11"
          role="columnheader"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c14"
            >
              Header 3
            </span>
          </div>
        </div>
      </div>
      <div
        className="c7 c15"
        role="row"
      >
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 1-1
            </span>
          </div>
        </div>
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 1-2
            </span>
          </div>
        </div>
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 1-3
            </span>
          </div>
        </div>
      </div>
      <div
        className="c7 c15"
        role="row"
      >
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 2-1
            </span>
          </div>
        </div>
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 2-2
            </span>
          </div>
        </div>
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 2-3
            </span>
          </div>
        </div>
      </div>
    </div>
    <span
      className="c2"
    >
      Small
    </span>
    <div
      className="c3 c4"
      role="table"
    >
      <caption
        className="c5"
      >
        <span
          className="c1 c6"
        />
      </caption>
      <div
        className="c7 c18 c9"
        role="row"
      >
        <div
          className="c10 c11"
          role="columnheader"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c14"
            >
              Header 1
            </span>
          </div>
        </div>
        <div
          className="c10 c11"
          role="columnheader"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c14"
            >
              Header 2
            </span>
          </div>
        </div>
        <div
          className="c10 c11"
          role="columnheader"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c14"
            >
              Header 3
            </span>
          </div>
        </div>
      </div>
      <div
        className="c7 c19"
        role="row"
      >
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 1-1
            </span>
          </div>
        </div>
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 1-2
            </span>
          </div>
        </div>
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 1-3
            </span>
          </div>
        </div>
      </div>
      <div
        className="c7 c19"
        role="row"
      >
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 2-1
            </span>
          </div>
        </div>
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 2-2
            </span>
          </div>
        </div>
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 2-3
            </span>
          </div>
        </div>
      </div>
    </div>
    <span
      className="c2"
    >
      Medium
    </span>
    <div
      className="c3 c4"
      role="table"
    >
      <caption
        className="c5"
      >
        <span
          className="c1 c6"
        />
      </caption>
      <div
        className="c7 c8 c9"
        role="row"
      >
        <div
          className="c10 c11"
          role="columnheader"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c14"
            >
              Header 1
            </span>
          </div>
        </div>
        <div
          className="c10 c11"
          role="columnheader"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c14"
            >
              Header 2
            </span>
          </div>
        </div>
        <div
          className="c10 c11"
          role="columnheader"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c14"
            >
              Header 3
            </span>
          </div>
        </div>
      </div>
      <div
        className="c7 c15"
        role="row"
      >
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 1-1
            </span>
          </div>
        </div>
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 1-2
            </span>
          </div>
        </div>
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 1-3
            </span>
          </div>
        </div>
      </div>
      <div
        className="c7 c15"
        role="row"
      >
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 2-1
            </span>
          </div>
        </div>
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 2-2
            </span>
          </div>
        </div>
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 2-3
            </span>
          </div>
        </div>
      </div>
    </div>
    <span
      className="c2"
    >
      Large
    </span>
    <div
      className="c3 c4"
      role="table"
    >
      <caption
        className="c5"
      >
        <span
          className="c1 c6"
        />
      </caption>
      <div
        className="c7 c20 c9"
        role="row"
      >
        <div
          className="c10 c11"
          role="columnheader"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c14"
            >
              Header 1
            </span>
          </div>
        </div>
        <div
          className="c10 c11"
          role="columnheader"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c14"
            >
              Header 2
            </span>
          </div>
        </div>
        <div
          className="c10 c11"
          role="columnheader"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c14"
            >
              Header 3
            </span>
          </div>
        </div>
      </div>
      <div
        className="c7 c21"
        role="row"
      >
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 1-1
            </span>
          </div>
        </div>
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 1-2
            </span>
          </div>
        </div>
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 1-3
            </span>
          </div>
        </div>
      </div>
      <div
        className="c7 c21"
        role="row"
      >
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 2-1
            </span>
          </div>
        </div>
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 2-2
            </span>
          </div>
        </div>
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 2-3
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | FlexTable / FlexTable with different size props Tables With Different Font Sizes 1`] = `
.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c7 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c7 > *:not(:first-child) {
  padding-top: 0;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c14 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c18 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c17 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c19 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c12 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c13 {
  width: inherit;
}

.c16 {
  overflow: hidden;
}

.c8 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c8 > *:first-child {
  padding-left: 0;
}

.c8 > *:last-child {
  padding-right: 0;
}

.c15 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c15:hover {
  background: #F5F5F5;
}

.c15 > *:first-child {
  padding-left: 0;
}

.c15 > *:last-child {
  padding-right: 0;
}

.c9 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  border-bottom: 1px solid #282823;
}

.c11 {
  overflow: hidden;
}

.c3 {
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  padding-left: 4px;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

.c4:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Tables With Different Font Sizes
  </span>
  <div
    className="c0"
  >
    <span
      className="c2"
    >
      Default (Medium)
    </span>
    <div
      className="c3 c4"
      role="table"
    >
      <caption
        className="c5"
      >
        <span
          className="c1 c6"
        />
      </caption>
      <div
        className="c7 c8 c9"
        role="row"
      >
        <div
          className="c10 c11"
          role="columnheader"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c14"
            >
              Header 1
            </span>
          </div>
        </div>
        <div
          className="c10 c11"
          role="columnheader"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c14"
            >
              Header 2
            </span>
          </div>
        </div>
        <div
          className="c10 c11"
          role="columnheader"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c14"
            >
              Header 3
            </span>
          </div>
        </div>
      </div>
      <div
        className="c7 c15"
        role="row"
      >
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 1-1
            </span>
          </div>
        </div>
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 1-2
            </span>
          </div>
        </div>
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 1-3
            </span>
          </div>
        </div>
      </div>
      <div
        className="c7 c15"
        role="row"
      >
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 2-1
            </span>
          </div>
        </div>
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 2-2
            </span>
          </div>
        </div>
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 2-3
            </span>
          </div>
        </div>
      </div>
    </div>
    <span
      className="c2"
    >
      Small
    </span>
    <div
      className="c3 c4"
      role="table"
    >
      <caption
        className="c5"
      >
        <span
          className="c1 c6"
        />
      </caption>
      <div
        className="c7 c8 c9"
        role="row"
      >
        <div
          className="c10 c11"
          role="columnheader"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c18"
            >
              Header 1
            </span>
          </div>
        </div>
        <div
          className="c10 c11"
          role="columnheader"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c18"
            >
              Header 2
            </span>
          </div>
        </div>
        <div
          className="c10 c11"
          role="columnheader"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c18"
            >
              Header 3
            </span>
          </div>
        </div>
      </div>
      <div
        className="c7 c15"
        role="row"
      >
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c19"
            >
              Cell 1-1
            </span>
          </div>
        </div>
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c19"
            >
              Cell 1-2
            </span>
          </div>
        </div>
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c19"
            >
              Cell 1-3
            </span>
          </div>
        </div>
      </div>
      <div
        className="c7 c15"
        role="row"
      >
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c19"
            >
              Cell 2-1
            </span>
          </div>
        </div>
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c19"
            >
              Cell 2-2
            </span>
          </div>
        </div>
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c19"
            >
              Cell 2-3
            </span>
          </div>
        </div>
      </div>
    </div>
    <span
      className="c2"
    >
      Medium
    </span>
    <div
      className="c3 c4"
      role="table"
    >
      <caption
        className="c5"
      >
        <span
          className="c1 c6"
        />
      </caption>
      <div
        className="c7 c8 c9"
        role="row"
      >
        <div
          className="c10 c11"
          role="columnheader"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c14"
            >
              Header 1
            </span>
          </div>
        </div>
        <div
          className="c10 c11"
          role="columnheader"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c14"
            >
              Header 2
            </span>
          </div>
        </div>
        <div
          className="c10 c11"
          role="columnheader"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c14"
            >
              Header 3
            </span>
          </div>
        </div>
      </div>
      <div
        className="c7 c15"
        role="row"
      >
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 1-1
            </span>
          </div>
        </div>
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 1-2
            </span>
          </div>
        </div>
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 1-3
            </span>
          </div>
        </div>
      </div>
      <div
        className="c7 c15"
        role="row"
      >
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 2-1
            </span>
          </div>
        </div>
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 2-2
            </span>
          </div>
        </div>
        <div
          className="c10 c16"
          role="cell"
        >
          <div
            className="c12 c13"
          >
            <span
              className="c17"
            >
              Cell 2-3
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | FlexTable / FlexTable with different size props Tables With Different Sizes In Mobile 1`] = `
.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c3 {
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  padding-left: 4px;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

.c4:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Tables With Different Sizes on mobile
  </span>
  <div
    className="c0"
  >
    <span
      className="c2"
    >
      Small density and font on desktop, large on mobile
    </span>
    <div
      className="c3 c4"
      role="table"
    >
      <caption
        className="c5"
      >
        <span
          className="c1 c6"
        />
      </caption>
    </div>
  </div>
</div>
`;
